# loadout

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md
loadout/: CMakeLists.txt  Logger.h  ProcessWatcher.cpp  loadout.cpp  loadout.h  main.cpp
src/: EventBus.h  Events.h  Logger.h  ProcessWatcher.cpp  ProcessWatcher.h  main.cpp
src/Actions/: Command.h  CommandHandler.h  ProcessCommandHandler.h
